@@ -1079,3 +1079,13 @@ Reggie, 12.4.1999:
 Reggie, 13.4.1999:
 ------------------
 - Fixes
+
+Reggie, 14.4.1999:
+------------------
+- Implemented saving footnotes/endotes
+- Implemented saving footnote/endnote manager
+- Implemented loading footnote/endnote manager
+- Implemented loading footnotes/endotes
+
+
+
